SLING-12626: Resource Resolver: refactor MapEntries - test code cleanup